--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,33 +1,55 @@
 <html>
-    <head>
-        <title>Login Here</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    </head>
-    <body class="container">
-        <div class="page-header">
-            <h1>Simple Auth-System</h1>
+  <head>
+    <title>Login Here</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body class="container">
+    <div class="page-header">
+      <h1>Simple Auth-System</h1>
+    </div>
+
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li><a href="/">Home</a></li>
+            <li><a href="/signup">Sign Up</a></li>
+            <li><a href="/dashboard">Dashboard</a></li>
+            <li><a href="/index">Verify</a></li>
+          </ul>
+
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="/login">Log In</a></li>
+            <li><a href="/logout">Log Out</a></li>
+          </ul>
         </div>
+        <!-- /.navbar-collapse -->
+      </div>
+      <!-- /.container-fluid -->
+    </nav>
 
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/signup">Sign Up</a></li>
-                        <li><a href="/dashboard">Dashboard</a></li>
-                    </ul>
-
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/login">Log In</a></li>
-                        <li><a href="/logout">Log Out</a></li>
-                    </ul>
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
-        </nav>
-
-        <div class="container row">
-           <h1>Hi, Welcome to your Dashboard</h1>
-        </div>
-    </body>
+    <div class="container row">
+      <h1>Hi, Welcome to your Dashboard</h1>
+      <!--
+               if(yourstatus == "no") fill ur form 
+               else if(yourstatus == "one") underverification
+               else if(yourstatus == "two") verified
+               else not verified
+            -->
+      <h3 id="yourstatus">Fill you form</h3>
+      <!-- <h1><%=name%></h1> -->
+    </div>
+    <!-- <script>
+        // const data = req.session.user;
+        var name = "<%= name %>";
+        console.log(name);
+      document.getElementById("yourstatus").innerHTML = "Fill your form";
+    </script> -->    
+  </body>
 </html>
